@@ -69,8 +69,7 @@ public class NcSDUInt16 extends SDUInt16 implements HasNetcdfVariable {
   }
 
   public void setData(Array data) {
-    ArrayShort.D0 a = (ArrayShort.D0) data;
-    setValue(a.get());
+    setValue(data.getShort(data.getIndex()));
     setRead(true);
   }
 
