@@ -70,8 +70,7 @@ public class NcSDUInt32 extends SDUInt32 implements HasNetcdfVariable {
   }
 
   public void setData(Array data) {
-    ArrayInt.D0 a = (ArrayInt.D0) data;
-    setValue(a.get());
+    setValue(data.getInt(data.getIndex()));
     setRead(true);
   }
 
